--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "formicine"]
 	path = lib/formicine
 	url = https://github.com/kaitamkun/formicine.git
+[submodule "unilib"]
+	path = unilib
+	url = https://github.com/ufal/unilib.git
